[package]
name = "raspi-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
thiserror = "1.0.30"
clap = { version = "4.5.18", features = ["derive", "cargo"] }
clap-num = "1.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3"

rppal = { version = "0.19.0", features = ["hal"] }

ssd1306 = "0.9.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"

hostname = "0.4"
sysinfo = "0.32.0"
